<?xml version="1.0"?>
<package format="3">
  <name>common</name>
  <version>0.1.0</version>
  <description>Shared base classes and utilities for Polyflow nodes</description>

  <maintainer email="drew@polyflowrobotics.com">Drew Swinney</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
