[project]
name = "common"
version = "0.1.0"
description = "Shared base classes and utilities for Polyflow nodes"
license = "MIT"
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
dependencies = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/common"]
"share/common" = ["package.xml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
