<?xml version="1.0"?>
<package format="3">
  <name>joint_controller</name>
  <version>0.0.1</version>
  <description>Polyflow ROS 2 joint controller — hardware-agnostic kernel that emits polyflow_msgs/JointCommand on PRP for hardware adapters to consume.</description>

  <maintainer email="drew@polyflowrobotics.com">Drew Swinney</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>composition_interfaces</depend>
  <depend>rclpy</depend>
  <depend>common</depend>
  <depend>polyflow_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
