[project]
name = "joint_controller"
version = "0.1.0"
description = "Polyflow joint controller node — hardware-agnostic JointCommand emitter"
license = "MIT"
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
dependencies = [
    "setuptools",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/joint_controller"]
"share/joint_controller" = ["package.xml"]

[project.scripts]
joint_controller_node = "joint_controller.node:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
