[project]
name = "motor_controller"
version = "0.1.0"
description = "Generic Polyflow motor controller node"
license = "MIT"
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
dependencies = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/motor_controller"]
"share/motor_controller" = ["package.xml"]

[project.scripts]
motor_controller_node = "motor_controller.node:main"
