[project]
name = "odrive_s1"
version = "0.1.0"
description = "Polyflow ODrive S1 controller node"
license = "MIT"
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
dependencies = [
    "setuptools",
    "odrive",
    "numpy",
    "python-can",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/odrive_s1"]
"share/odrive_s1" = ["package.xml", "node.launch.py"]

[project.scripts]
odrive_s1_node = "odrive_s1.node:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
