[tool.pdm.build]
includes = [
    "gamepad",
]

[project]
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
requires-python = ""
dependencies = []
name = "gamepad"
version = "0.1.0"
description = "Polyflow gamepad teleop input node"
license = {text = "MIT"}

[project.scripts]
gamepad_node = "gamepad.node:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
