[project]
name = "differential_drive"
version = "0.1.0"
description = "Polyflow differential drive orchestrator node"
license = "MIT"
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
dependencies = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/differential_drive"]
"share/differential_drive" = ["package.xml"]

[project.scripts]
differential_drive_node = "differential_drive.node:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
