[project]
name = "battery_monitor"
version = "0.1.0"
description = "Polyflow generic battery monitor sensor node"
license = "MIT"
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
dependencies = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/battery_monitor"]
"share/battery_monitor" = ["package.xml"]

[project.scripts]
battery_monitor_node = "battery_monitor.node:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
