[project]
name = "camera"
version = "0.1.0"
description = "Polyflow camera sensor node"
license = "MIT"
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
dependencies = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/camera"]
"share/camera" = ["package.xml"]

[project.scripts]
camera_node = "camera.node:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
