[tool.pdm.build]
includes = [
    "optical_encoder",
]

[project]
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
requires-python = ""
dependencies = []
name = "optical_encoder"
version = "0.1.0"
description = "Polyflow optical encoder sensor node"
license = {text = "MIT"}

[project.scripts]
optical_encoder_node = "optical_encoder.node:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
