[project]
name = "bool_from_gamepad"
version = "0.1.0"
description = "Polyflow utility node — extracts a single button from GamepadButtons as a Bool"
license = "MIT"
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
dependencies = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/bool_from_gamepad"]
"share/bool_from_gamepad" = ["package.xml"]

[project.scripts]
bool_from_gamepad_node = "bool_from_gamepad.node:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
