[project]
name = "twist_to_pose"
version = "0.1.0"
description = "Polyflow twist-to-pose integrator utility node"
license = "MIT"
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
dependencies = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/twist_to_pose"]
"share/twist_to_pose" = ["package.xml"]

[project.scripts]
twist_to_pose_node = "twist_to_pose.node:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
